animacion landing page
se creo una animacion la cual se aplico a  la foto del landing page

--- a/Gafe_editor/public/index.html
+++ b/Gafe_editor/public/index.html
@@ -39,7 +39,7 @@
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 					<div style="margin-left: 20px; margin-top: 50px;">
-						<img id="img-edit" class="img-responsive" src="img/editores.jpg">		
+						<img class="img-responsive imagen" src="img/editores.jpg">		
 					</div>		
 				</div>
 			</div>
