--- a/Gafe_editor/public/index.html
+++ b/Gafe_editor/public/index.html
@@ -27,33 +27,34 @@
 			</div>
 		</header>
 
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-bottom:50px">
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-					<div style="margin-left: 20px; margin-top: 100px ;color: #FFFFFF;">
+		<div style="margin-top:80px; margin-bottom:20px">
+			<!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-bottom:50px">-->
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<div style="margin-left:15px; margin-top:60px; color:#FFFFFF; margin-bottom:150px; margin-right:15px">
 						<h1 style="font-size: 60px">Haz una experiencia inolvidable...</h1>
 						<p  style="  font-size: 20px">
 							<span style="color:#FFFFFF; ">Gafe Editor reúne el mejor sistema de gestión y codificación colaborativa en línea, donde puedes crear tus proyectos de manera rapida, facil y creativa...</span>
 						</p>		
 					</div>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-					<div style="margin-left: 20px; margin-top: 50px;">
-						<img class="img-responsive imagen" src="img/editores.jpg">		
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<div style="margin-left:20px; margin-top: 10px; margin-bottom:150px; margin-right:20px">
+						<img class="img-responsive imagen" src="img/Sin título.png">		
 					</div>		
 				</div>
-			</div>
+			<!--</div>-->
 		</div>
 		
 		<div class="row">
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 cuadro1">
 			<section id="sin-compromisos">
-				<div class="cuadro1">   
+				<div class="">   
 					<div style=" max-width: 980px; align-items: center;margin-left: 200px; margin-right: 200px;">                       
 						<ul class="nav nav-tabs nav-justified" style="align-items: center;">
 							<li  class="text-center" class="active">
 								<a href="#sin-compromisos" onclick="javascript:oculta();">
 									<div class="thumbnaile">
-										<span class="glyphicon glyphicon-transfer" style= "font-size: 6em"  aria-hidden="true" ></span>
+										<span class="glyphicon glyphicon-transfer" style= "font-size: 4em"  aria-hidden="true" ></span>
 										<div class="caption">        
 											<p><br>Sin compromisos</p> 
 										</div>
@@ -64,7 +65,7 @@
 							<li  class="text-center">
 								<a href="#ve-donde-quieras" onclick="javascript:oculta1();">
 									<div class="thumbnaile">
-										   <span class="glyphicon glyphicon-pencil" style= "font-size: 6em"  aria-hidden="true" ></span>
+										   <span class="glyphicon glyphicon-pencil" style= "font-size: 4em"  aria-hidden="true" ></span>
 										<div class="caption">
 											<p><br>Edita tus proyectos<br></p> 
 										</div>
@@ -74,7 +75,7 @@
 							<li  class="text-center">
 								<a href="#elige-plan" onclick="javascript:oculta2();">
 									<div class="thumbnaile">
-										<span class="glyphicon glyphicon-shopping-cart" style= "font-size: 6em"  aria-hidden="true" ></span>
+										<span class="glyphicon glyphicon-shopping-cart" style= "font-size: 4em"  aria-hidden="true" ></span>
 										<div class="caption">
 											<p><br>Elige tu plan<br></p> 
 										</div>
@@ -101,7 +102,7 @@
 		
 						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 ">
 							<div >
-								<img src="img/asset_cancelanytime_withdevice.png" class="img-responsive">							
+								<img src="img/cancela.jpg" class="img-responsive">							
 							</div>
 						</div>
 						<br><br>
@@ -111,6 +112,7 @@
 					</div>	
 				</div>	
 			</section>
+		</div>
 
 			<section id="ve-donde-quieras" style="display: none;">
 				<div class="cuadro1 ">
