--- a/Gafe_editor/public/principal.html
+++ b/Gafe_editor/public/principal.html
@@ -92,7 +92,7 @@
                                     <span data-feather="plus"></span>
                                     Nuevo
                                     <div class="dropdown-menu" aria-labelledby="dropdown03">
-                                            <a class="dropdown-item" href="#">Proyecto</a>
+                                            <a class="dropdown-item" href="editar-codigo.html">Proyecto</a>
                                             <a class="dropdown-item" href="#">Carpeta</a>
                                             <a class="dropdown-item" href="#">Archivo</a>
                                     </div>
