--- a/Gafe_editor/public/index.html
+++ b/Gafe_editor/public/index.html
@@ -38,10 +38,10 @@
           <form class="form-inline mt-2 mt-md-0">
 			<ul class="navbar-nav mr-100px">
 				<li class="nav-item active">
-				  <a class="nav-link" href="login.html">Login</a>
+				  <a style="font-size:20px" class="nav-link" href="login.html">Login</a>
 				</li>
 				<li class="nav-item">
-				  <a class="nav-link" href="registro-usuarios.html">Registrarse</a>
+				  <a style="font-size:20px" class="nav-link" href="registro-usuarios.html">Registrarse</a>
 				</li>
 				<div class="navbarnav2"></div>
 			</ul>
