--- a/Gafe_editor/public/editar-codigo.html
+++ b/Gafe_editor/public/editar-codigo.html
@@ -51,19 +51,19 @@
         <form style="text-align:right" class="form-inline mt-2 mt-md-0">
             <ul class="navbar-nav mr-100px">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a style="font-size:20px" class="nav-link" href="#">
                         <span data-feather="download"></span>
                         Descargar
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a style="font-size:20px" class="nav-link" href="#">
                         <span data-feather="cloud"></span>
                         Guardar
                     </a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span data-feather="user"></span>Salir</a>
+                    <a style="font-size:20px" class="nav-link dropdown-toggle" href="" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span data-feather="user"></span>Salir</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown03">
                         <a class="dropdown-item" href="#">Ver perfil</a>
                         <a class="dropdown-item" href="principal.html">Pagina principal</a>
