--- a/Gafe_editor/public/principal.html
+++ b/Gafe_editor/public/principal.html
@@ -25,7 +25,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
 		</button>
-		<div class="col-lg-4 col-xl-4 col-md-8 col-sm-8 col-8">
+		<div class="col-lg-3 col-xl-3 col-md-8 col-sm-8 col-8">
 			<div>
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
@@ -41,19 +41,19 @@
                         <input style="width: 600px; border-radius: 5px" class="form-control" type="text" placeholder="Search" aria-label="Search">
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a style="font-size:20px" class="nav-link" href="#">
                             <span data-feather="help-circle"></span>
                             Ayuda
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a style="font-size:20px" class="nav-link" href="#">
                             <span data-feather="settings"></span>
                             Soporte
                         </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span data-feather="user"></span>Perfil</a>
+                        <a style="font-size:20px" class="nav-link dropdown-toggle" href="" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span data-feather="user"></span>Perfil</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown03">
                             <a class="dropdown-item" href="#">Ver perfil</a>
                             <a class="dropdown-item" href="index.html">Salir</a>
