--- a/Gafe_editor/public/principal.html
+++ b/Gafe_editor/public/principal.html
@@ -55,7 +55,7 @@
                     <li class="nav-item dropdown">
                         <a style="font-size:20px" class="nav-link dropdown-toggle" href="" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span data-feather="user"></span>Perfil</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown03">
-                            <a class="dropdown-item" href="#">Ver perfil</a>
+                            <a class="dropdown-item" href="perfil.html">Ver perfil</a>
                             <a class="dropdown-item" href="index.html">Salir</a>
                         </div>
                     </li>
