--- a/Gafe_editor/public/principal.html
+++ b/Gafe_editor/public/principal.html
@@ -41,7 +41,7 @@
                         <input style="width: 600px; border-radius: 5px" class="form-control" type="text" placeholder="Search" aria-label="Search">
                     </li>
                     <li class="nav-item">
-                        <a style="font-size:20px" class="nav-link" href="#">
+                        <a style="font-size:20px" class="nav-link" href="ayuda.html">
                             <span data-feather="help-circle"></span>
                             Ayuda
                         </a>
@@ -67,11 +67,6 @@
 
    
         <!-- dashboard -->
-        <div class="col-lg-4">
-            <img class="rounded-circle img-responsive" src="img/coverblog2-20.png" alt="Generic placeholder image" width="140" height="140">
-        </div>
-
-
         <div class="container-fluid">
                 <div class="row">
                   <nav class="col-md-2 d-none d-md-block bg-light sidebar">
@@ -126,18 +121,18 @@
                       <ul class="nav flex-column mb-2">
                         <li class="nav-item">
                             <div style="margin-left: 15px" class="form-group">
-                                <input class="btn btn-danger" type="button" value="Suscribete a un plan">
+                                <input class="btn btn-danger" type="button" onclick="location.href='planes.html'" value="Suscribete a un plan">
                              </div>
                         </li>
                       </ul>
                     </div>
                   </nav>
                   
-                  <main style="margin-top:0px" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+                  <main style="margin-top:50px" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                         <h3>Carpetas</h3><br>
                         <div class="container">
                             <div class="col-12 row">
-                                <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12">
+                                <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-3 col-3">
                                     <div>
                                         <img class="mr-3 rounded-circle img-fluid" src="img/folder.svg" height="150px" width="120px">
                                     </div>
@@ -145,7 +140,7 @@
                                         <strong>Nombre carpeta</strong> 
                                     </div>
                                 </div>
-                                <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12">
+                                <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-3 col-3">
                                     <div>
                                         <img class="mr-3 rounded-circle img-fluid" src="img/folder.svg" height="150px" width="120px">
                                     </div>
@@ -153,7 +148,7 @@
                                         <strong>Nombre carpeta</strong> 
                                     </div>
                                 </div>
-                                <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12">
+                                <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-3 col-3">
                                     <div>
                                         <img class="mr-3 rounded-circle img-fluid" src="img/folder.svg" height="150px" width="120px">
                                     </div>
@@ -161,7 +156,7 @@
                                         <strong>Nombre carpeta</strong> 
                                     </div>
                                 </div>
-                                <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12">
+                                <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-3 col-3">
                                     <div>
                                         <img class="mr-3 rounded-circle img-fluid" src="img/folder.svg" height="150px" width="120px">
                                     </div>
@@ -169,7 +164,7 @@
                                         <strong>Nombre carpeta</strong> 
                                     </div>
                                 </div>
-                                <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12">
+                                <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-3 col-3">
                                     <div>
                                         <img class="mr-3 rounded-circle img-fluid" src="img/folder.svg" height="150px" width="120px">
                                     </div>
@@ -177,7 +172,7 @@
                                         <strong>Nombre carpeta</strong> 
                                     </div>
                                 </div>
-                                <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12">
+                                <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-3 col-3">
                                     <div>
                                         <img class="mr-3 rounded-circle img-fluid" src="img/folder.svg" height="150px" width="120px">
                                     </div>
@@ -185,7 +180,7 @@
                                         <strong>Nombre carpeta</strong> 
                                     </div>
                                 </div>
-                                <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12">
+                                <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-3 col-3">
                                     <div>
                                         <img class="mr-3 rounded-circle img-fluid" src="img/folder.svg" height="150px" width="120px">
                                     </div>
@@ -199,7 +194,7 @@
                     <h3>Archivos</h3><br>
                     <div class="container">
                         <div class="col-12 row">
-                            <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12">
+                            <div class="separar col-xl-2 col-lg-2 col-md-2 col-sm-3 col-3">
                                 <div>
                                     <img class="mr-3 rounded-circle img-fluid" src="img/clipboard.svg" height="150px" width="120px">
                                 </div>
