--- a/Gafe_editor/public/editar-codigo.html
+++ b/Gafe_editor/public/editar-codigo.html
@@ -65,7 +65,7 @@
                 <li class="nav-item dropdown">
                     <a style="font-size:20px" class="nav-link dropdown-toggle" href="" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span data-feather="user"></span>Salir</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown03">
-                        <a class="dropdown-item" href="#">Ver perfil</a>
+                        <a class="dropdown-item" href="perfil.html">Ver perfil</a>
                         <a class="dropdown-item" href="principal.html">Pagina principal</a>
                         <a class="dropdown-item" href="index.html">Salir</a>
                     </div>
