--- a/Gafe_editor/public/principal.html
+++ b/Gafe_editor/public/principal.html
@@ -83,15 +83,14 @@
                         </li>
                         <br>
                         <li class="nav-item">
-                            <a class="nav-link active dropdown-toggle" href="" id="dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <span data-feather="plus"></span>
-                                    Nuevo
-                                    <div class="dropdown-menu" aria-labelledby="dropdown03">
-                                            <a class="dropdown-item" href="editar-codigo.html">Proyecto</a>
-                                            <a class="dropdown-item" href="#">Carpeta</a>
-                                            <a class="dropdown-item" href="#">Archivo</a>
-                                    </div>
+                            <a class="nav-link dropdown-toggle active" href="" id="dropdow3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <span data-feather="plus"></span> Nuevo
                             </a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown03">
+                                <a class="dropdown-item" href="editar-codigo.html">Proyecto</a>
+                                <a class="dropdown-item" href="#">Carpeta</a>
+                                <a class="dropdown-item" href="#">Archivo</a>
+                            </div>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">
