--- a/Gafe_editor/public_usuario/perfil.html
+++ b/Gafe_editor/public_usuario/perfil.html
@@ -68,24 +68,26 @@
                     <h3>Acerca de mi</h3>
                     <br>
                     <div class="row" id="formulario-signup">
-                        <!-- <div class="form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
-                            <span style="font-size:20px">nombre</span>
-                        </div>
-                        <div class="form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
-                            <span style="font-size:20px">apellido</span></div>
+                        <div class="form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                            <b>Nombre </b><br>
+                            <input class="form-control" type="text" name="" id="nombre"> 
+                        </div><br>
+                        
                         <div class=" form-group col-12">
-                            <span style="font-size:20px">num</span></div>
+                            <b>Numero de telefono </b><br>
+                            <input class="form-control" type="text" name="" id="telefono">
+                        </div><br>
                         <div class="form-group col-12">
-                            <b>Informacion de contacto</b>
-                            <span style="font-size:20px">correo</span>   
+                            <b>Correo</b><br>
+                            <input class="form-control" type="text" name="" id="contacto">   
+                        </div><br>
+                        <div class="form-group col-12">
+                            <b>Birthday</b><br>
+                            <input class="form-control" type="text" name="" id="cumpleanios">    
+                        </div><br>
+                        <div class="form-group col-12">
+                            <input class="btn btn-danger" type="button" onclick="location.href='editar-perfil.html'" value="Editar perfil">
                         </div>
-                        <div class="form-group col-12">
-                            <b>Birthday</b>
-                            <span style="font-size:20px">nacimiento</span>    
-                        </div>
-                        <div class="form-group col-12">
-                            <input class="btn btn-success" type="button" onclick="location.href='editar-perfil.html'" value="Editar perfil">
-                        </div> -->
                         
                     </div>
                 </div>
