--- a/Gafe_editor/public_usuario/principal.html
+++ b/Gafe_editor/public_usuario/principal.html
@@ -87,9 +87,12 @@
                                 <span data-feather="plus"></span> Nuevo
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdown03">
-                                <a class="dropdown-item" href="editar-codigo.html">Proyecto</a>
+                                <!-- <a class="dropdown-item" href="editar-codigo.html">Proyecto</a>
                                 <a class="dropdown-item" href="#">Carpeta</a>
-                                <a class="dropdown-item" href="#">Archivo</a>
+                                <a class="dropdown-item" href="#">Archivo</a> -->
+                                <button id="proyecto" type="button" class="btn btn-link dropdown-item">Proyecto</button>
+                                <button id="carpeta" type="button" class="btn btn-link dropdown-item">Carpeta</button>
+                                <button id="archivo" type="button" class="btn btn-link dropdown-item">Archivo</button>
                             </div>
                         </li>
                         <li class="nav-item">
