--- a/Gafe_editor/public_usuario/planes.html
+++ b/Gafe_editor/public_usuario/planes.html
@@ -25,8 +25,24 @@
                 <table class="table table-striped " style="margin-top: 100px;">
                     <thead>
                         <tr>
-                            <th colspan="3" ></th>
+                            <th colspan="3" style="text-align:right;"><h2 id="cambiar">Seleccione un plan</h2>
+                                
+                            </th>
                             
+                            <th colspan="3" style="text-align:center">
+                                <form id="plan1" action="">
+                                    <label class="btn btn-success " >
+                                    <input type="radio" name="options1" id="option1" autocomplete="off" value="1">Basico <br>
+                                    </label> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+                                    <label class="btn btn-success " >
+                                    <input type="radio" name="options1" id="option1" autocomplete="off" value="2">Estandar <br>
+                                    </label> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+                                    <label class="btn btn-success " >
+                                    <input type="radio" name="options1" id="option1" autocomplete="off" value="3">Premium
+                                    </label>
+                                </form>
+                            </th>
+                        <!-- <form id="plan">
                             <th scope="col">
                                 <label class="btn btn-success " >
 					   			     <input type="radio" name="options" id="option1" autocomplete="off" value="1">Basico
@@ -42,14 +58,15 @@
                                     <input type="radio" name="options" id="option3" autocomplete="off" value="3" > Premium
                                 </label>
                             </th>
+                        </form> -->
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td colspan="3" >El precio mensual después de que termina el mes gratis es</th>
-                            <td>USD5.99</td>
-                            <td>USD9.99</td>
-                            <td>USD13.99</td>
+                            <td colspan="3" >El precio mensual después de que termina el mes gratis es:</th>
+                            <td style="text-align: center; ">USD5.99</td>
+                            <td style="text-align: center; ">USD9.99</td>
+                            <td style="text-align: center; ">USD13.99</td>
                         </tr>
                         <tr>
                             <td colspan="3" >Almacenamiento ilimitado</td>
@@ -84,7 +101,7 @@
                     </tbody>
                 </table>
                 <div >
-                    <button type="button" id="btn-cambiar" class="btn btn-success" onclick="location.href='registrotarjeta-modal.html'" style="font-size: 27px">Continuar</button>
+                    <button type="button" id="btn-cambiar" class="btn btn-success"  style="font-size: 27px">Continuar</button>
                 </div>
             </div>
             <div class=" col-xl-1 col-lg-1 col-xs-1 col-sm-1">
@@ -109,5 +126,12 @@
     <script>
       feather.replace()
     </script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/controlador_planes.js"></script>
+    <!-- <script>
+        $("#plan input").on('change', function() {
+            alert($('input[name=options]:checked', '#plan').val()); 
+        });
+    </script> -->
   </body>
 </html>
