--- a/Gafe_editor/public_usuario/archivos_proyectos_compartidos.html
+++ b/Gafe_editor/public_usuario/archivos_proyectos_compartidos.html
@@ -102,7 +102,7 @@
                           </a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">
+                          <a class="nav-link" href="proyectos_compartidos.html">
                             <span data-feather="share-2"></span>
                             Archivos compartidos
                           </a>
@@ -202,8 +202,8 @@
     <script src="js/bootstrap.min.js"></script>
 
 
-    <script src="js/controlador_archivos_proyectos.js"></script>
-    <!-- <script src="js/controlador_archivos_proyectos_compartido.js"></script> -->
+    <!-- <script src="js/controlador_archivos_proyectos.js"></script> -->
+    <script src="js/controlador_archivos_proyectos_compartido.js"></script>
     <!-- Graphs -->
     
     
