--- a/Gafe_editor/public_usuario/ayuda.html
+++ b/Gafe_editor/public_usuario/ayuda.html
@@ -31,7 +31,7 @@
 						</a>
 					</li>
 					<li class="nav-item dropdown">
-						<a style="font-size:20px" class="nav-link dropdown-toggle" href="" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span data-feather="user"></span>Perfil</a>
+						<a style="font-size:20px" class="nav-link dropdown-toggle" href="" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user"></i></span>  Perfil</a>
 						<div class="dropdown-menu" aria-labelledby="dropdown03">
 							<a class="dropdown-item" href="principal.html">Pagina principal</a>
 							<a class="dropdown-item" href="index.html">Salir</a>
