--- a/Gafe_editor/public_usuario/principal-Sub-carpeta.html
+++ b/Gafe_editor/public_usuario/principal-Sub-carpeta.html
@@ -53,7 +53,7 @@
                         </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a style="font-size:20px" class="nav-link dropdown-toggle" href="" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span data-feather="user"></span>Perfil</a>
+                        <a style="font-size:20px" class="nav-link dropdown-toggle" href="" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user"></i> </span> Perfil</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown03">
                             <a class="dropdown-item" href="perfil.html">Ver perfil</a>
                             <a class="dropdown-item" href="/cerrar-sesion">Salir</a>
